# Cyclecare

./: CMakeLists.txt  README.md
docs/: implementation_plan.md  initial_feature_tests.md
docs/feature_specs/: predict_next_period.md
src/: Cycle.cpp  Cycle.h  CycleCareApp.cpp  CycleCareApp.h  MoodLog.cpp  MoodLog.h  Recommendation.cpp  Recommendation.h  User.cpp  User.h  main.cpp
tests/: test_main.cpp
